add style sheet

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,2 +1,33 @@
 <!-- I think there is no need to set any content here as so far,
      maybe later I would change my idea-->
+{{ define "main" }}
+<article class="columns">
+    <!-- date column -->
+    <div class="column is-2">
+        <h6 class="is-inline" style="white-space: nowrap;">{{ .Date.Format "Jan 2"}} </h6>
+    </div>
+    <!-- article title and summary etc.  -->
+    <div class="column">
+        <h2 class="subtitle is-inline is-size-4-mobile is-size-3-desktop">
+            <!-- title -->
+            <a href="{{ .Permalink }}">
+                {{ .Title }}
+                {{ if .Draft }} ::draft {{ end }}
+            </a>
+            <!-- summary -->
+            <div class="content is-hidden-mobile">
+                {{ .Summary | plainify | safeHTML | truncate 400 }}
+                {{ if .Truncated }}
+                <br>
+                <a class="button is-marginless is-paddingless" href="{{ .Permalink }}">
+                    <span class="icon-link is-small" style="line-height: 100%;">
+                        <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+                    </span>
+                    <p style="padding: 0 5px;">more</p>
+                </a>
+                {{ end }}
+            </div>
+        </h2>
+    </div>
+</article>
+{{ end }}
