--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
-<section>
-    <div>
+<section class="section">
+    <div class="container has-text-centered">
         <p>{{ .Site.Copyright | safeHTML }}</p>
     </div>
 </section>
