--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,30 +1,30 @@
-<div>
-    <div id="categories">
-        <div>
+<div class="container">
+    <div id="navibarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
             <p>
-                <a href="{{`/` | relLangURL }}">Home</a>
+                <a class="navbar-item" href="{{`/` | relLangURL }}">Home</a>
             </p>
             {{ if not .Site.Params.omit_categories }}
                 {{ range $name,$taxonomy := .Site.Taxonomies.categories }}
                     <p>
-                        <a href="{{- `categories/` | relLangURL }}{{ $name | urlize }}">{{ $name }}</a>
+                        <a class="navbar-item is-capitalized" href="{{- `categories/` | relLangURL }}{{ $name | urlize }}">{{ $name }}</a>
                     </p>
                 {{ end }}
             {{ end }}
         </div>
     </div>
-    <nav>
-        <div>
-            <a href="{{ .Site.BaseURL }}">
-                <h1>{{ .Site.Title }}</h1>
+    <nav class="navbar level">
+        <div class="navbar-brand">
+            <a class="nav-item" href="{{ .Site.BaseURL }}">
+                <h1 class="title is-3">{{ .Site.Title }}</h1>
             </a>
         </div>
-        <div>
-            <div>
+        <div class="navbar-menu has-text-centered is-active">
+            <div class="navbar-end is-centered">
                 {{ range .Site.Params.social }}
-                <a href="">
-                    <span>
-                        <i></i>
+                <a href="{{ .url | absURL }}" rel="me">
+                    <span class="icon">
+                        <i class="{{ .fa_icon }}"></i>
                     </span>
                 </a>
                 {{ end }}
