--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -1,19 +1,43 @@
-<section>
-    <div>
-        <nav>
-            <div>
-                {{ if .Paginator.HasPrev }}
-                    <a href="{{ .Paginator.Prev.URL }}">Newer</a>
-                {{ else }}
-                    <a disabled>Newer</a>
-                {{ end }}
+<section class="section">
+    <div class="container">
+        <nav class="level is-mobile">
+            <div class="level-left">
+                <div class="level-item">
+                    {{ if .Paginator.HasPrev }}
+                        <a class="button is-rounded" href="{{ .Paginator.Prev.URL }}">
+                            <span class="icon is-small is-marginless">
+                                <i class="fa fa-angle-left"></i>
+                            </span>
+                            Newer
+                        </a>
+                    {{ else }}
+                        <a class="button is-rounded" disabled>
+                            <span class="icon is-small is-marginless">
+                                <i class="fa fa-angle-left"></i>
+                            </span>
+                            Newer
+                        </a>
+                    {{ end }}
+                </div>
             </div>
-            <div>
-                {{ if .Paginator.HasNext }}
-                    <a href="{{ .Paginator.Next.URL }}">Older</a>
-                {{ else }}
-                    <a disabled>Older</a>
-                {{ end }}
+            <div class="level-right is-marginless">
+                <div class="level-item">
+                    {{ if .Paginator.HasNext }}
+                        <a class="button is-rounded" href="{{ .Paginator.Next.URL }}">
+                            <span class="icon is-small is-marginless">
+                                <i class="fa fa-angle-right"></i>
+                            </span>
+                            Older
+                        </a>
+                    {{ else }}
+                        <a class="button is-rounded" disabled>
+                            <span class="icon is-small is-marginless">
+                                <i class="fa fa-angle-right"></i>
+                            </span>
+                            Older
+                        </a>
+                    {{ end }}
+                </div>
             </div>
         </nav>
     </div>
