--- a/layouts/partials/posts.html
+++ b/layouts/partials/posts.html
@@ -1,10 +1,12 @@
-<div>
-    <div>
+<div class="container">
+    <div class="columns">
         {{ $pageGroups := (.Paginate (.Site.RegularPages.GroupByDate "2006")).PageGroups }}
         {{ .Scratch.Set "pageGroups" $pageGroups}}
         <!-- pass pageGroups params here to make code clean, thus post_list.html only get pageGroups and 
         just render it ,therefore repeated code in taxonomy.html can be reduced a lot -->
-        {{ partial "post_list.html" .}}
-        {{ partial "pagination.html" . }}
+        <div class="column">
+            {{ partial "post_list.html" .}}
+            {{ partial "pagination.html" . }}
+        </div>
     </div>
 </div>
