--- a/scss/mystyles.scss
+++ b/scss/mystyles.scss
@@ -1,6 +1,4 @@
 @charset "utf-8";
-@import "../node_modules/bulma/bulma.sass";
-
 // override bulma defaults
 $grey-darker: #584029;
 $dark: #584029;
@@ -14,9 +12,9 @@ $primary:$grey-darker;
 $link:$blue;
 $link-hover:#202020;
 $pre-background:$grey-lighter;
-$family-sans-serif:"Domain",Georgia,serif;
+$family-sans-serif:"Domine",Georgia,serif;
 $body-background-color:$grey-lighter;
-$nav-background-color:$grey-lighter;
+$navbar-background-color:$grey-lighter;
 $navbar-item-hover-background-color:$cyan;
 $button-background-color:$grey-lighter;
 $button-border-color:$cyan;
@@ -30,6 +28,10 @@ $desktop:860px + (2 * $gap);
 $widescreen-enabled:false;
 $mobile: 479px;
 
+
+@import "../node_modules/bulma/bulma.sass";
+
+
 html {
     box-sizing: border-box;
     clear: both;
@@ -42,7 +44,7 @@ body {
 
 .icon {
     font-size: 1.2em;
-    margin: .5em, .5em;
+    margin: .5em .5em;
 }
 
 .button {
