--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,7 +18,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.0.1/highlight.min.js"
     integrity="sha512-W7EehcwtSbRF63FIQlXEOOd5mnq0Et0V0nUOvwcUvjnCKgOLLYbqriQxEQSp63sfrkryxIg/A/O8v8O18QwQCQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script>hljs.initHighlightingOnload()</script>
+<script>hljs.initHighlightingOnLoad();</script>
 <script src="{{ $scratch.Get `baseURL` }}/js/highlight.js"></script>
 {{ end }}
 
