--- a/scss/mystyles.scss
+++ b/scss/mystyles.scss
@@ -1,54 +1,79 @@
 @charset "utf-8";
-// override bulma defaults
+
+// overrider bulma defaults*
+
 $grey-darker: #584029;
-$dark: #584029;
-$grey-lighter:#f8f1e3;
-$light:#f8f1e3;
-$blue:#760411;
-$cyan:#b8ab99;
-$device:320px;
 
-$primary:$grey-darker;
-$link:$blue;
-$link-hover:#202020;
-$pre-background:$grey-lighter;
-$family-sans-serif:"Domine",Georgia,serif;
-$body-background-color:$grey-lighter;
-$navbar-background-color:$grey-lighter;
-$navbar-item-hover-background-color:$cyan;
-$button-background-color:$grey-lighter;
-$button-border-color:$cyan;
-$button-hover-border-color:$grey-darker;
-$button-disabled-border-color:$grey-darker;
-$button-focus-box-shadow-color:transparent;
+$dark: #100801dd;
 
-$gap:64px;
-$full-enabled:false;
-$desktop:860px + (2 * $gap);
-$widescreen-enabled:false;
+$grey-lighter: #f8f1e3;
+
+$light: #f8f1e3;
+
+$blue: #760411;
+
+$cyan: #b8ab99;
+
+$device: 320px;
+
+$primary: $grey-darker;
+
+$link: $blue;
+
+$link-hover: #202020;
+
+$pre-background: $grey-lighter;
+
+$family-sans-serif: "Domine",Georgia, "Microsoft Yahei", monospaces !important;
+
+$body-background-color: $grey-lighter;
+
+$navbar-background-color: $grey-lighter;
+
+$navbar-item-hover-background-color: $cyan;
+
+$button-background-color: $grey-lighter;
+
+$button-border-color: $cyan;
+
+$button-hover-border-color: $grey-darker;
+
+$button-disabled-border-color: $grey-darker;
+
+$button-focus-box-shadow-color: transparent;
+
+$gap: 64px;
+
+$fullhd-enabled: false;
+
+$desktop: 860px + (2 * $gap);
+
+$widescreen-enabled: false;
+
 $mobile: 479px;
-
 
 @import "../node_modules/bulma/bulma.sass";
 
-
 html {
     box-sizing: border-box;
+
     clear: both;
 }
 
 body {
     line-height: 1.5;
+
     padding: 2em 2em;
 }
 
 .icon {
     font-size: 1.2em;
-    margin: .5em .5em;
+
+    margin: 0.5em 0.5em;
 }
 
 .button {
-    &:active:not([disabled]){
+    &:active:not([disabled]) {
         top: 1px;
     }
 }
@@ -57,9 +82,24 @@ body {
     justify-content: center;
 
     h1 {
-        font-size: 1.8em;
-        color: $link;
+        font-size: $size-4;
+        color: $dark;
     }
+
+    h2 {
+        font-size: $size-5;
+        color: $dark;
+    }
+
+    h3 {
+        font-size: $size-6;
+        color: $dark; 
+    }
+
+    h4 {
+        font-size: $size-7;
+        color: $dark; 
+    } 
 
     h6 {
         font-size: 1em;
@@ -67,34 +107,45 @@ body {
         color: $dark;
     }
 
-    h2 {
-        font-size: 1.8em;
-        color: $dark;
-    }
 
     .navbar {
         padding: 3rem 0rem;
+
         .navbar-brand {
             margin-left: 0;
+
             align-items: center;
+
             justify-content: center;
         }
+
         .navbar-menu {
             box-shadow: 0 0 0;
+
             padding: 1em 0;
         }
-
     }
 }
 
 .content {
-    h1,h2,h3,h4,h5,h6 {
-        font-weight: normal;
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        font-weight: bold;
     }
+    
+    font-weight: normal;
+
+    color: #202020;
 
     blockquote {
         background-color: #f1ebe2;
+
         border: 1px $cyan solid;
+
         border-radius: 5px;
     }
 
@@ -104,6 +155,7 @@ body {
 
     pre {
         padding: 1.25em 0;
+
         code {
             border-radius: 5px;
         }
@@ -111,12 +163,15 @@ body {
 
     :not(pre) > code {
         display: inline !important;
-        padding: .2em;
+
+        padding: 0.2em;
     }
 
     .button {
         color: $link;
+
         border: 0px;
+
         &:hover {
             color: $link-hover;
         }
@@ -127,13 +182,18 @@ body {
     padding: 1.5em 0;
 }
 
-// hugo content display fix
+*// hugo content display fix*
+
 .hugo-figure {
     img {
         display: block;
+
         margin: 0.7rem auto;
+
         border-radius: 5px;
+
         object-fit: cover;
+
         border: 1px $cyan solid;
     }
 }
