--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -29,10 +29,15 @@
 {{ if eq "true" .Site.Params.share.enabled }}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsSocials/1.5.0/jssocials.css"
     integrity="sha512-RnlOHNqHvv1JWAQk+6/Chw2zfzPkq91LvnsOak8fJzXJ5g+msDb26UGCIXGhTAgVGrFgsXZx0PM1i7iFXY/5KQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" /> {{ end }}
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+{{ end }}
 <script type="text/javascript" src="{{ $scratch.Get `baseURL` }}/js/jssocials.js"></script>
+<script src="https://utteranc.es/client.js"
+        repo="diagramStorage"
+        issue-term=""
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
 {{ .Scratch.Delete "baseURL" }}
-
-</html>
-
 </html>
