--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
-    {{- partial "head.html" . -}}
-    {{- partial "nav.html" . -}}
-    <body>
-        {{- partial "header.html" . -}}
-        <div id="content">
+{{- partial "head.html" . -}}
+{{- partial "nav.html" . -}}
+
+<body>
+    {{- partial "header.html" . -}}
+    <div id="content">
         {{- block "main" . }}
         {{- end }}
-        </div>
-        {{- partial "footer.html" . -}}
-    </body>
+        {{ if eq "true" .Site.Params.comment.enabled }} 
+            {{- partial "comment.html" . -}}
+        {{ end }}
+    </div>
+    {{- partial "footer.html" . -}}
+</body>
+
 </html>
