--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -31,6 +31,6 @@
     integrity="sha512-RnlOHNqHvv1JWAQk+6/Chw2zfzPkq91LvnsOak8fJzXJ5g+msDb26UGCIXGhTAgVGrFgsXZx0PM1i7iFXY/5KQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 {{ end }}
-<script type="text/javascript" src="{{ $scratch.Get `baseURL` }}/js/jssocials.js"></script>
+<script type="text/javascript" src="{{ $scratch.Get `baseURL` }}js/jssocials.js"></script>
 {{ .Scratch.Delete "baseURL" }}
 </html>
