--- a/scss/mystyles.scss
+++ b/scss/mystyles.scss
@@ -78,6 +78,7 @@ body {
     }
 }
 
+// blog post content
 .container {
     justify-content: center;
 
@@ -142,6 +143,7 @@ body {
     }
     
     font-weight: normal;
+    font-size: .95rem;
 
     color: #202020;
 
