--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,10 +1,18 @@
 {{ define "main" }}
 <div class="container">
-    <h2 class="subtitle is-6">{{ .Date.Format "January 2,2006"}}</h2>
     <h1 class="subtitle is-size-4-mobile is-size-3-desktop">{{ .Title }}</h1>
+    <h2 class="subtitle is-6">{{ .Date.Format "January 2,2006"}}</h2>
     <div class="content">{{ .Content }}</div>
 </div>
 {{ if eq "true" .Site.Params.comment.enabled }}
 {{- partial "comment.html" . -}}
 {{ end }}
+<div>
+    <div id="share"></div>
+    <script>
+        $("#share").jsSocials({
+            shares: ["email", "twitter", "facebook", "googleplus", "linkedin", "pinterest", "stumbleupon", "whatsapp"]
+        });
+    </script>
+</div>
 {{ end }}
